--- a/Labir/Labir.csproj
+++ b/Labir/Labir.csproj
@@ -181,5 +181,14 @@
   <ItemGroup>
     <None Include="Resources\тыков0,5.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\A1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\A2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\D2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
